--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,11 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.7.5",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/winston": "^2.4.4",
     "gts": "^6.0.2",
     "nodemon": "^3.1.9",
@@ -20,9 +24,14 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-token": "^0.1.2",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   }
